--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
 Theme Name: Bare Bones Basic Theme
 Theme URI: 
+Github Theme URI: https://github.com/danyork/barebones-wordpress
 Description: A very basic theme for experimentation and learning
 Author: Dan York
 Author URI: http://danyork.com/
-Version: 1.0
-
+Version: v1.0.0
 License:  GPL
 
 A very barebones theme purely for me to learn about WordPress Themes
