--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Github Theme URI: https://github.com/danyork/barebones-wordpress
 Description: A very basic theme for experimentation and learning
 Author: Dan York
 Author URI: http://danyork.com/
-Version: v1.1.2
+Version: v1.1.3
 License:  GPL
 
 A very barebones theme purely for me to learn about WordPress Themes
@@ -22,4 +22,8 @@ body {
 
 h2 {
     font-size: 40pt;
+}
+
+h3 {
+    font-size: 20pt;
 }
